--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,262 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
+:root {
+  --primary-color: #012a4a;
+  --secondary-color: #013a63;
+  --accent1-color: #01497c;
+  --accent2-color: #014f86;
+
+  --heading-font: "Roboto", serif;
+  --paragraph-font: "Roboto Flex", serif;
+
+  --nav-backgroud-color: var(--primary-color);
+  --nav-link-color: #ffffff;
+  --nav-hover-link-color: var(--nav-link-color);
+  --nav-hover-background-color: var(--accent2-color);
+}
+
+
 /******* Change Box Model ***************/
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+}
+
+/* The About page stylesheet */
+body {
+  font-family: "Roboto", sans-serif;
+ 
+  margin: 0 auto;
+  position: relative;
+  display: flex;
+  
+  flex-direction: column;
+
+  /* border: 2px solid var(--primary-color); */
+
+  align-content: center;
+}
+
+header {
+  transition: all 0.5s;
+  z-index: 997;
+  padding: 15px 0;
+  position: fixed;
+
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+  background-color: #0f3f5f;
+  opacity: 0.8;
+  padding: 1rem;
+ 
+  color: #ffffff;
+  justify-content: space-between;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+body, header,footer{
+  width: 70%;
+}
+
+
+nav {
+  position: relative;
+  display: flex;
+
+  background-color: var(--primary-color);
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 65px;
+}
+nav ul {
+  list-style-type: none;
+  background-color: var(--primary-color);
+}
+
+.navigation {
+  list-style: none;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.navigation {
+  position: relative;
+  display: flex;
+  
+  flex-wrap: wrap;
+  align-items: center;
+  
+  justify-content: space-between;
+  gap: 10px;
+  padding: 15px;
+  transition: 0.5s;
+ 
+}
+
+.navigation a, .site-head {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 400;
+  font-size: clamp(1rem, 2vmin, 1.5rem);
+}
+
+.navigation a:hover,
+navigation a:active {
+  color: white;
+  transform: scale(1.1);
+  background-color: var(--primary-color);
+}
+
+
+
+ul .active {
+  background-color: var(--primary-color);
+  color: yellow;
+}
+
+#top-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+.siteName a {
+  font-size: 2rem;  
+  text-decoration: none;
+}
+.content{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+ 
+ 
+
+}
+.card{
+ grid-column: 1/3;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.model{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
+  justify-content: center;
+  gap: 10px;
+}
+.model h2{
+  text-align: center;
+  font-weight: 700;
+
+}
+
+.description{
+  display: flex;
+  flex-direction: column;
+ 
+  align-items: center;
+ 
+  gap: 10px;
+}
+
+.box-featured{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  
+}
+.btn-get-started {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px 28px 11px 28px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px 0 0 60px;
+  color: #fff;
+  background: rgb(5, 71, 102);
+}
+.items{
+  display: flex;
+  z-index: 997;
+ 
+ 
+  flex-direction: column;
+  list-style: none;
+  align-items: center;
+  background-color: #f9f9f9;
+  opacity: 0.7;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+ 
+  justify-content: center;
+  gap: 10px;
+  height: auto;
+  
+  
+}
+.items li{
+  color: #013a63;
+  font-size: 1.5rem;
+  margin: 10px;
+  text-align: center;
+  font-weight: 500;
+
+}
+
+.items .car-name{
+  font-weight: bold;
+  font-size: 2rem;
+ 
+}
+.features{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  background-color: rgb(202, 240, 126);
+  align-items: center;
+}
+
+.reviews{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 35px;
+  background-color: #f9f9f9;
+  border: 2px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 20px;
+  width: 100%;
 }
