Inventory views and error handling

--- a/public/css/larger.css
+++ b/public/css/larger.css
@@ -1,3 +1,4 @@
+
 /* Mobile View */
 @media screen and (max-width: 768px) {
     .content{
@@ -5,9 +6,9 @@
         flex-direction: column;
         gap: 20px;
         width: 100%;
-    
+
         margin-top: 50px;
-    
+
     }
 
     body, header,footer{
@@ -27,16 +28,23 @@
         margin: 10px;
         text-align: center;
         font-weight: 300;
-      
+
       }
-      
+
       .items .car-name{
         font-weight: bold;
         font-size: 1.5rem;
-       
+
       }
       .btn-get-started{
         font-size: 10px;
         font-weight: 300;
       }
+       #inv-display-details{
+        grid-template-columns: 1fr;
+    }
+    #inv-display-details img{
+        width: 100%;
+    }
+    
 }
