Week 4 learning activity

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -359,7 +359,7 @@ nav ul {
         gap: 15px;
     }
 
-   
+
     #inv-display li .namePrice {
         padding: 10px;
     }
@@ -373,7 +373,7 @@ nav ul {
     #inv-display {
         grid-template-columns: 1fr; /* Single column on very small screens */
     }
-    }
+}
 
 
 
@@ -381,7 +381,7 @@ nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
- 
+
   display: grid;
   grid-template-columns: 1fr 1fr; /* Allow cards to wrap on smaller screens */
   justify-content: center; /* Center cards horizontally */
@@ -396,11 +396,11 @@ nav ul {
   width: 100%; /* Default to full width for mobile */
   padding: 10px;
   display: flex;
-  
+
   flex-direction: column;
   margin: 10px;
   border: 1px solid #ddd;
-  
+
 }
 
 #inv-display-details li:first-child { /* Image card */
@@ -424,4 +424,95 @@ nav ul {
 #inv-display-details li:last-child span {
   display: block; /* Make each span a block element for better spacing */
   margin-bottom: 5px;
+}
+
+.col-12 input,
+.col-12 select {
+  width: 100%;
+
+  height: 40px;
+}
+
+.col-6 {
+  width: 60%;
+}
+.form-control:focus {
+  border-color: #bbb;
+  box-shadow: none;
+  outline: 0;
+}
+.form-control::placeholder {
+  color: #6e82a3;
+  font-size: 14px;
+}
+.form-group {
+  margin-bottom: 1rem;
+}
+label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+}
+.form-control {
+  border-color: #dce0eb;
+  color: #26292c;
+  font-size: 15px;
+  min-height: 42px;
+  padding: 6px 5px;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  padding: 0.200rem 0.60rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-top-color: rgb(206, 212, 218);
+  border-right-color: rgb(206, 212, 218);
+  border-bottom-color: rgb(206, 212, 218);
+  border-left-color: rgb(206, 212, 218);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.submit-section .submit-btn {
+  padding: 12px 30px;
+  font-weight: 600;
+  font-size: 16px;
+  min-width: 120px;
+}
+
+
+label {
+  place-self: self-start;
+  margin-left: 3px;
+}
+
+form {
+  display: grid;
+   background-color: rgb(206, 212, 218);
+  background-clip: padding-box;
+  border: 1px solid #aab0b6;
+ 
+  place-items: center;
+}
+
+
+input:required:invalid, input:focus:invalid {
+   border: 2px dashed red;
+
+ /* insert your own styles for invalid form input */
+}
+
+.notice{
+  background-color: yellow;
+  border: 1px solid yellow;
+  color:black;
 }
