--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,8 @@
-<!--<h1>Iwe Maxwell </h1>-->
-
 <div class="container">
-    <h1>Welcome CSE Motors ! </h1>
+    <h1>Welcome CSE Motors ! 
+
+    </h1>
+    <%- messages() %>
     <div class="content">
         <div class="card">
             <div class="box-featured">
